2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.16 released.

        * Fixed username lookup when using FullAuto with TeamSite.


2012-04-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.15 released.

        * Fixed code for selecting fa_menu for FullAuto.


2012-03-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.14 released.

        * Removed temp error messages.


2012-02-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.13 released.

        * Fixed bug in summation menu.


2012-02-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.12 released.

        * Fixed bug returning pick from search menu.


2012-02-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.11 released.

        * Fixed bug returning hashes when when select is many
          on single level menu.


2012-01-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.10 released.

        * Recursive Menus now properly return accurate results
          when select is many, and no dirs in topmenu.


2012-01-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.9 released.

        * Recursive Menus now properly return accurate results.

        * Recursive Menus example updated. The example menu
          dynamically navigates the file system.


2012-01-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.8 released.

        * Navigation Search is fixed for multi-level menus.


2012-01-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.7 released.

        * More fixes for navigation markers when going
          backwards in multi-level menus.


2012-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.6 released.

        * Fixed navigation markers when going backwards in
          multi-level menus.

