@@ -12,7 +12,7 @@ name: Term-Menus
 provides:
   Term::Menus:
     file: lib/Term/Menus.pm
-    version: 2.15
+    version: 2.17
   TMMemHandle:
     file: lib/Term/Menus.pm
 requires:
@@ -21,4 +21,4 @@ requires:
   Term::RawInput: 0
 resources:
   license: http://opensource.org/licenses/gpl-3.0.html
-version: 2.15
+version: 2.17
