@@ -1,3 +1,10 @@
+2012-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.17 released.
+
+        * Added "help" and "admin" menus to all FullAuto menus.
+
+
 2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.16 released.
